--- a/README
+++ b/README
@@ -1,5 +1,7 @@
+OpenAir timesheet dynamic view only.
 Changes drop down size to 30.
 Adjusts the width of the timesheet table to be wider.
 
 Things to do later. 
 Make it a greasemonkey script so it runs whenever openair.com/timesheet loads.
+Only tested quickly in Safari, FireFox and Chrome.
